# kailua

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  justfile  kurtosis-eigenda.yaml  kurtosis.yaml  print.html  project.html  proposer.html  rpc.html  searchindex.js  setup.html  validator.html
.cargo/: config.toml
.github/workflows/: ci.yml  docker-release.yml  gh-pages.yml  release.yml
book/: README.md  book.toml
book/src/: SUMMARY.md  design.md  dispute.md  fpvm-upgrade.md  game.md  parameters.md  project.md  proposer.md  quickstart.md  rpc.md  setup.md  treasury.md  upgrade.md  validator.md
crates/contracts/: Cargo.toml  build.rs
crates/contracts/foundry/: foundry.toml  justfile  remappings.txt
crates/contracts/foundry/scripts/: Deploy.s.sol  UpgradeVerifier.s.sol
crates/contracts/foundry/src/: KailuaGame.sol  KailuaLib.sol  KailuaTournament.sol  KailuaTreasury.sol  KailuaVerifier.sol  Proxy.sol
crates/contracts/foundry/test/: BlobDispute.t.sol  Bond.t.sol  ClaimDispute.t.sol  Costs.t.sol  Deploy.t.sol  FaultSemaphore.t.sol  KZG.t.sol  KailuaTest.t.sol  Propose.t.sol  ProxyUpgrade.t.sol  Reward.t.sol
crates/contracts/src/: lib.rs
crates/hana/: Cargo.toml
crates/hana/src/: da.rs  stitching.rs
crates/hokulea/: Cargo.toml
crates/hokulea/src/: canoe.rs  da.rs  lib.rs  stitching.rs
crates/kona/: Cargo.toml
crates/kona/src/: blobs.rs  config.rs  driver.rs  executor.rs  journal.rs  kona.rs  lib.rs  witness.rs
crates/kona/src/client/: core.rs  mod.rs  stateless.rs  stitching.rs
crates/kona/src/oracle/: local.rs  vec.rs
crates/kona/src/precondition/: derivation.rs  execution.rs  mod.rs  proposal.rs
crates/kona/src/rkyv/: driver.rs  execution.rs  mod.rs  optimism.rs
crates/kona/testdata/: MANIFEST-000220
crates/proposer/src/: fetch.rs  propose.rs  resolve.rs
crates/prover/: Cargo.toml
crates/prover/src/: args.rs  config.rs  driver.rs  hint_handler.rs  kv.rs  lib.rs  preflight.rs  profiling.rs  proof.rs  prove.rs  tasks.rs
crates/prover/src/client/: native.rs  payload.rs  proving.rs  witgen.rs
crates/prover/src/hana/: handler.rs  providers.rs  witgen.rs
crates/prover/src/hokulea/: canoe.rs  mod.rs  provider.rs  witgen.rs
crates/prover/src/risczero/: bonsai.rs  boundless.rs  mod.rs  zkvm.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: sync.rs
crates/sync/: Cargo.toml  build.rs
crates/sync/src/: agent.rs  args.rs  cursor.rs  deployment.rs  proposal.rs  retry.rs  stall.rs
crates/sync/src/provider/: beacon.rs  mod.rs  optimism.rs
crates/sync/src/transact/: fillers.rs  mod.rs  provider.rs  rpc.rs
crates/sync/tests/: fusaka.rs
crates/validator/: Cargo.toml
crates/validator/src/: args.rs  channel.rs  lib.rs  requests.rs  tasks.rs  validate.rs
crates/validator/src/proposals/: dispatch.rs  mod.rs  processing.rs  receipts.rs  trails.rs
devnet/: .gitignore
openspec/changes/archive/2026-03-10-delay-fault-proof-submission/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-10-fix-agent-abi-delayed-permits/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-migrate-solidity-deps-to-packages/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-migrate-solidity-deps-to-packages/specs/foundry-dependency-management/: spec.md
openspec/changes/archive/2026-03-11-update-build-rs-for-package-imports/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-update-build-rs-for-package-imports/specs/foundry-dependency-management/: spec.md
openspec/changes/archive/2026-03-13-fast-track-proxy-deployment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-13-fast-track-proxy-deployment/specs/fast-track-proxy/: spec.md
openspec/changes/archive/2026-03-13-fast-track-proxy-deployment/specs/proxy-contract-wrapper/: spec.md
openspec/changes/archive/2026-03-13-fast-track-proxy-deployment/specs/proxy-deployment/: spec.md
openspec/changes/archive/2026-03-13-upgradeable-kailua-verifier/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-13-upgradeable-kailua-verifier/specs/fpvm-upgrade-docs/: spec.md
openspec/changes/archive/2026-03-13-upgradeable-kailua-verifier/specs/proxy-deployment/: spec.md
openspec/changes/archive/2026-03-13-upgradeable-kailua-verifier/specs/verifier-upgrade/: spec.md
openspec/changes/archive/2026-03-14-proxy-upgrade-test/: design.md  proposal.md  tasks.md
openspec/specs/delayed-permits-abi/: spec.md
openspec/specs/fast-track-proxy/: spec.md
openspec/specs/foundry-dependency-management/: spec.md
openspec/specs/fpvm-upgrade-docs/: spec.md
openspec/specs/permit-activation-gate/: spec.md
openspec/specs/proxy-contract-wrapper/: spec.md
openspec/specs/proxy-deployment/: spec.md
openspec/specs/proxy-upgrade-test/: spec.md
openspec/specs/verifier-upgrade/: spec.md
scripts/: devnet-clean-eigenda.sh  devnet-clean.sh  devnet-down.sh  devnet-env.sh  devnet-fetch.sh  devnet-up-eigenda.sh  devnet-up.sh  eigenda-proxy-encoded-shim.py  optimism-package-v1.16.7.patch  patch-optimism-package.sh  render-devnet-descriptor.py  run-kurtosis-devnet.py
