[package]
name = "kailua-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
bincode.workspace = true
bytemuck.workspace = true
c-kzg.workspace = true
clap.workspace = true
csv.workspace = true
futures.workspace = true
hex.workspace = true
human_bytes.workspace = true
itertools.workspace = true
lazy_static.workspace = true
opentelemetry.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
thousands.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-retry.workspace = true

# Alloy
alloy = { workspace = true, features = ["full", "kzg", "contract", "rlp", "sol-types"] }
alloy-primitives.workspace = true
op-alloy-network.workspace = true
op-alloy-consensus.workspace = true

# Kailua
kailua-build.workspace = true
kailua-sync.workspace = true

# Kona
kailua-kona.workspace = true
kona-derive.workspace = true
kona-genesis.workspace = true
kona-host.workspace = true
kona-registry.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-protocol.workspace = true
kona-providers-alloy.workspace = true
kona-std-fpvm.workspace = true

# Hokulea
kailua-hokulea = { workspace = true, optional = true }
canoe-bindings = { workspace = true, optional = true }
canoe-provider = { workspace = true, optional = true }
canoe-verifier = { workspace = true, optional = true }
canoe-verifier-address-fetcher = { workspace = true, optional = true }
hokulea-host-bin = { workspace = true, optional = true }
hokulea-proof = { workspace = true, optional = true }
hokulea-witgen = { workspace = true, optional = true }

# Hana
kailua-hana = { workspace = true, optional = true }
celestia-rpc = { workspace = true, optional = true }
celestia-types = { workspace = true, optional = true }
hana-blobstream = { workspace = true, optional = true }
hana-host = { workspace = true, optional = true }
hana-oracle = { workspace = true, optional = true }

# Bonsai
bonsai-sdk.workspace = true
boundless-market.workspace = true

# RISC Zero
risc0-ethereum-contracts.workspace = true
risc0-zkvm.workspace = true
risc0-steel = { workspace = true, features = ["host"] }

[features]
devnet = [
    "kailua-sync/devnet"
]
prove = [
    "risc0-zkvm/prove"
]
cuda = [
    "risc0-zkvm/cuda"
]
metal = [
    "risc0-zkvm/metal"
]
disable-dev-mode = [
    "kailua-build/disable-dev-mode",
    "risc0-zkvm/disable-dev-mode"
]
rebuild-fpvm = [
    "kailua-build/rebuild-fpvm",
    "kailua-sync/rebuild-fpvm"
]
eigen = [
    "kailua-build/eigen",
    "kailua-sync/eigen",
    "dep:kailua-hokulea",
    "dep:canoe-bindings",
    "dep:canoe-provider",
    "dep:canoe-verifier",
    "dep:canoe-verifier-address-fetcher",
    "dep:hokulea-host-bin",
    "dep:hokulea-proof",
    "dep:hokulea-witgen",
]
celestia = [
    "kailua-build/celestia",
    "kailua-sync/eigen",
    "dep:kailua-hana",
    "dep:celestia-rpc",
    "dep:celestia-types",
    "dep:hana-blobstream",
    "dep:hana-host",
    "dep:hana-oracle",
]
